k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-learn
  template:
    metadata:
      labels:
        app: docker-learn
    spec:
      containers:
        - name: docker-learn
          image: misha912/docker-learn:0.1.1
          ports:
            - name: http
              containerPort: 8000
