k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: docker-learn
  ports:
    - protocol: TCP
      port: 9000
      targetPort: http
  type: NodePort
