k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: "/otusapp/yakimenko($|/)(.*)"
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 9000
